@startuml Class Diagram

package "Class Diagram - Customer Gestor" {

CustomerController -left- CustomerView
CustomerController -right- Customer
CustomerController -- AddressController
CustomerController -- PhoneController

AddressController -left- AddressView
AddressController -- Address

PhoneController -right- PhoneView
PhoneController -- Phone

class CustomerController {
    -model: Customer
    -view: CustomerView
    +list()
    +new()
    +save()
    +delete()
    +update()
}

class Customer {
    -id : Int
    -name: String
    -email: String
    -cpf : String
    -birthdate: Date
    -sex: String
    -maritalstatus: String
    -photo: String
    -created: Time
    -updated: Time
    +customer_list()
    +customer_delete()
    +customer_new()
    +customer_update()
    +custumer_search()
}

class AddressController {
    -model: Address
    -view: AddressView
    +new()
    +save()
    +delete()
}

class PhoneController {
    -model: Address
    -view: PhoneView
    +new()
    +save()
    +delete()
}

class Address {
    -id : Int
    -cpf : String
    -address_category : String
    -type : String
    -name : String
    -number : String
    -district : String
    -city : String
    -state : String
    -zip_code : String
    -complement : String
    -created: Time
    -updated: Time
    +post_address_list()
    +post_address_delete()
    +post_address_new()
}

class Phone {
    -id : Int
    -cpf : String
    -type : String
    -phone : String
    -created: Time
    -updated: Time
    +post_phone_list()
    +post_phone_delete()
    +post_phone_new()
}

class AddressView {
}

@enduml